<resources>
    <string name="app_name">NEMO</string>
    <string name="addImageBt">이미지 추가</string>
    <string name="writeTitleText">제목</string>
    <string name="writeDetailText">내용</string>
    <string name="imageDialogTitleText">사진 선택하기</string>
    <string name="dialogOk">확인</string>
    <string name="dialogCancel">취소</string>
    <string name="save">저장</string>
    <string name="modify">수정</string>
    <string name="delete">삭제</string>
    <string name="main_actionbar_title">내 메모라인</string>
</resources>
