<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="20dp"
    card_view:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/input_imgae_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/writeTitleText"
            android:textSize="15sp" />


        <Button
            android:id="@+id/input_dialog_ok"
            android:background="@android:color/transparent"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_below="@+id/input_imgae_url"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/dialogOk" />

        <Button
            android:id="@+id/input_dialog_cancel"
            android:background="@android:color/transparent"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_below="@+id/input_imgae_url"
            android:layout_toStartOf="@id/input_dialog_ok"
            android:layout_marginEnd="10dp"
            android:text="@string/dialogCancel" />


    </RelativeLayout>


</androidx.cardview.widget.CardView>
